Change hero CTA to 'Get the Book'

--- a/index.html
+++ b/index.html
@@ -1480,7 +1480,7 @@
     <section class="hero">
         <h1 class="hero-headline">Brand is your only lasting advantage.</h1>
         <p class="hero-sub">A boutique consultancy for fintechs and financial institutions who want to build a growth brand. We turn strategic conviction into frameworks that compound.</p>
-        <a href="#frameworks" class="hero-cta">See the Frameworks</a>
+        <a href="#book" class="hero-cta">Get the Book</a>
         <div class="scroll-indicator">
             <span>Scroll</span>
             <div class="scroll-line"></div>
