Add gray background to Library/Frameworks section

--- a/index.html
+++ b/index.html
@@ -284,6 +284,10 @@
            ======================================== */
         .frameworks-section {
             padding: var(--section-spacing) var(--gutter);
+            background: var(--offwhite);
+        }
+
+        .frameworks-inner {
             max-width: var(--max-width);
             margin: 0 auto;
         }
@@ -1539,7 +1543,8 @@
 
     <!-- ======== FRAMEWORK SHOWCASE ======== -->
     <section class="frameworks-section" id="frameworks">
-        <div class="section-label animate-on-scroll stagger-1">Strategic IP</div>
+        <div class="frameworks-inner">
+            <div class="section-label animate-on-scroll stagger-1">Strategic IP</div>
         <h2 class="section-heading animate-on-scroll stagger-1">The Library</h2>
         <p class="section-intro animate-on-scroll stagger-2">Open-source frameworks for brand strategy, positioning, and operating models. Built from real client work with fintechs and financial institutions. Use them, share them, bring them to your next leadership meeting.</p>
 
@@ -1745,6 +1750,7 @@
                 </div>
             </article>
 
+        </div>
         </div>
     </section>
 
