Expand scope for DO retainer per Jen's feedback

--- a/contracts/digital-onboarding-2026-03.html
+++ b/contracts/digital-onboarding-2026-03.html
@@ -291,7 +291,7 @@
                 <ul>
                     <li>Content validation and quality review</li>
                     <li>Optimization recommendations for distribution and placement</li>
-                    <li>Pitches and introductions for content placement opportunities</li>
+                    <li>Pitches and introductions for earned visibility — including content placements, awards, speaking engagements, podcasts, and consultant relationships</li>
                     <li>Async strategy gut-checks as needed</li>
                 </ul>
 
